Introduce TaskSession-based atomic worker state storage.
Replace lock-based mutable fields in DefaultWorkerStateManager with an atomic active session model so per-session counters and dedup keys are isolated and snapshot state derives from active-session semantics.

Made-with: Cursor